--- a/src/uni.scss
+++ b/src/uni.scss
@@ -75,4 +75,4 @@ $uni-font-size-subtitle: 18px;
 $uni-color-paragraph: #3f536e; // 文章段落颜色
 $uni-font-size-paragraph: 15px;
 
-@import "./node_modules/uview-ui/theme.scss";
+@import "../node_modules/uview-plus/theme.scss";
